Refactored MissionBoss to become a regular Mission. That simplified the code a lot!